--- a/index.html
+++ b/index.html
@@ -38,9 +38,11 @@
     <!-- Navbar -->
     <!-- Just an image -->
     <nav class="">
+        <div class="nav-div">
         <a class="logo-mid" href="#">
         <img class="nav-logo" src="images\logo.png" alt="">
         </a>
+    </div>
     </nav>
 
     <!-- Section 1 -->
@@ -407,9 +409,11 @@
       </section>
       <!-- footer -->
       <footer>
-            <a class="logo-mid" href="#">
-            <img class="nav-logo" src="images\logo.png" alt="">
-            </a>
+            <div class="footer-div">
+                <a class="logo-mid" href="#">
+                <img class="nav-logo" src="images\logo.png" alt="">
+                </a>
+            </div>
       </footer>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
       <script src="index.js" charset="utf-8"></script>
